scss/tmitg.scss
/* ... */
@media screen and (max-width: 680px) {
    #contact {
        .flexwrapper {
            display: block;
        }

        #leftcolumn {
            flex: none;
        }

        #rightcolumn {
            flex: none;
            margin-top: 6px;
            padding-top: 6px;
            border-top: 1px solid $black;
        }
    }
}


/* live page */
#live {
	.tblwrap {
		width: 100%;
		overflow-x: scroll;
		
		/* always show scrollbars */
		::-webkit-scrollbar {
		  -webkit-appearance: none;
		  width: 7px;
		}
		::-webkit-scrollbar-thumb {
		  border-radius: 4px;
		  background-color: rgba(0, 0, 0, .5);
		  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
		}
	}
    #liveTable {
        background-color: $white;
        width: 100%;
        border: 1px solid $black;
        border-spacing: 1px;

        .col1 {
            min-width: 122px;
        }

        .col2 {
            min-width: 87px;
        }

        .col3 {
            min-width: 77px;
        }

        .col4 {
            min-width: 132px;
        }

        .col5 {
            min-width: 350px;
        }

        .col6 {
            min-width: 136px;
        }

        thead {
            text-align: left;
            background-color: $black;
            color: white;
        }

        tbody {

            th,
            td {
                text-align: left;
                font-weight: normal;
                border: 1px solid $black;
            }
        }
    }

}

/* bio page */
#bio {
    main {
        p:first-child {
            margin-top: 0;
        }
    }
}

/* lyrics popups */
#lyrics {
    background: $black;
    color: $nearwhite;
    text-align: center;
    font-family: serif;
	padding: 0 12px;
    h1 {
        font-size: 1.25em;
        font-weight: bold;
    }

    h2 {
        font-size: 1.1em;
        font-weight: bold;
    }
}

/* notes popups */
#notes {
    background: $black;
    color: $nearwhite;
    text-align: left;
    font-family: serif;
	padding: 0 12px 12px;
    h1 {
        font-size: 1.25em;
        font-weight: bold;
    	text-align: center;
    }
    h2 {
        font-size: 1.1em;
        font-weight: bold;
	    text-align: center;
    }
    figure {
    	font-style: oblique;
    	padding: 0 12px;
    }
}


/* video popups */
#video {
    background: $black;
    color: $nearwhite;
    margin: 0;
    padding: 0;

    div {
        margin: 10px auto 0;
        padding: 0 10px;
        text-align: center;
    }
}


/* audio popups */
#audio {
    text-align: center;

    #player {
        width: 250px;
        height: 250px;
        margin: 15px auto 0;
    }

    .albumart {
        width: 250px;
        margin: 15px 0 0 0;
    }

    audio {
        width: 250px;
    }
}

/* colorbox overrides */
#cboxCurrent {
    color: #666;
}
#cboxTitle {
	text-align: right;
	left: -30px;
}

/* special styles for screen readers */
/* from http://adrianroselli.com/2017/12/tweaking-text-level-styles.html */
/* Base styles */
mark {
    background-color: #ff0;
    color: #000;
}

del,
s {
    text-decoration: line-through;
}

s {
    text-decoration-color: #f00;
}

ins {
    text-decoration: none;
    border-bottom: .2em double #080;
}

/* Screen-reader styles */
mark::before,
mark::after,
del::before,
del::after,
ins::before,
ins::after,
s::before,
s::after {
    clip-path: inset(100%);
    clip: rect(1px, 1px, 1px, 1px);
    height: 1px;
    width: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
}

mark::before {
    content: " (highlight start) ";
}

mark::after {
    content: " (highlight end) ";
}

del::before {
    content: " (deletion start) ";
}

del::after {
    content: " (deletion end) ";
}

ins::before {
    content: " (insertion start) ";
}

ins::after {
    content: " (insertion end) ";
}

s::before {
    content: " (start of stricken text) ";
}

s::after {
    content: " (end stricken text) ";
}

/* Screen-reader styles in another language */
*[lang=es] mark::before {
    content: " (resaltar inicio) ";
}

*[lang=es] mark::after {
    content: " (resaltar final) ";
}

/* Windows High Contrast Mode styles */
@media screen and (-ms-high-contrast: active) {
    mark {
        color: HighlightText;
        background-color: Highlight;
    }

    ins {
        border-bottom-color: Highlight;
    }

    s {
        text-decoration-color: Highlight;
    }
}

/* Print styles */
@media print {
    mark {
        border: 1pt dotted #000;
    }

    ins {
        border-bottom-width: 3pt;
    }
}

/* end special styles for screen readers */

/* Prefers Dark Mode */
@media (prefers-color-scheme: dark) {
    .mainbody {
        background-color: $black;
        color: $nearwhite;

        a,
        a .icon-file-alt,
        .icon-file-alt {
            color: $ltgray;
        }

        a .icon-music,
        .icon-music {
            color: $lightdark;
        }

        a .icon-film,
        .icon-film {
            color: $teal;
        }
    }

    #discog thead {
        color: $black;
    }

    #merch a.atcss {
        color: $nearwhite;
    }

    #music {

        .albumcol,
        .audiocol,
        .videocol {
            h2 {
                color: $lightdark;
            }
        }

        #accordion {
            background: $black;
        }

        .videocol h4 {
            color: $lightdark;
        }

        .audiocol h4 {
            color: $lightdark;
        }
    }

    #live #liveTable {
        background-color: $black;
        border: 1px solid $nearwhite;

        tbody td,
        tbody th {
            border: 1px solid $nearwhite;
        }
    }
}

/* end Prefers Dark Mode */

@import url('/tmitg-mobile.css');

